--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,13 @@
 <!doctype html>
-<html lang="en">
+<html lang="fr" class="h-100">
 <head>
   <meta charset="utf-8">
-  <title>NgStartpage</title>
+  <title>Ng-Startpage</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body>
-  <app-root></app-root>
+<body class="h-100">
+  <app-root class="container h-100 d-flex flex-column align-content-center"></app-root>
 </body>
 </html>
